--- a/Server/Webapp/app/views/cuisine_add.html
+++ b/Server/Webapp/app/views/cuisine_add.html
@@ -1,6 +1,6 @@
 <md-dialog layout-padding>
 	<md-subheader>Ajouter un produit</md-subheader>
-	<md-content>
+	<md-content  layout=column>
 		<md-autocomplete
 			md-floating-label="Produit/Recherchez"
 			md-search-text-change="itemChange()" 
