--- a/Server/Webapp/app/views/pharmacie_add.html
+++ b/Server/Webapp/app/views/pharmacie_add.html
@@ -1,5 +1,5 @@
 <md-dialog layout-padding>
-	<md-content>
+	<md-content layout=column>
 		<md-input-container>
 			<label>M&eacute;dicament</label>
 			<input ng-model=name class=dialog-close>
