--- a/Server/Webapp/app/views/home.html
+++ b/Server/Webapp/app/views/home.html
@@ -22,7 +22,7 @@
 			<md-content>
 				<div layout=row >
 					<md-input-container flex>
-						<label>Ajoutez (Nom, Quantit&eacute;)</label>
+						<label>Ajouter (Nom, Quantit&eacute;)</label>
 						<input ng-model=item ng-enter="addCourse(item)">
 					</md-input-container>
 					<md-button class="md-fab md-primary md-mini" aria-label="FAB" ng-click="addCourse(item)">
