--- a/Server/Webapp/app/views/settings.html
+++ b/Server/Webapp/app/views/settings.html
@@ -103,6 +103,11 @@
         						<label>Intervalle pour la musique de bienvenue (en heures)</label>
         						<input type="number" ng-model=atlantis.Audio.welcome >
        						</md-input-container>
+       						<div layout=row layout-align="end center">
+       							<md-button class="md-icon-button" aria-label="FAB" ng-click="saveAudio()">
+								  <md-icon md-svg-src="images/svg/ic_check_black_36px.svg"></md-icon>
+								</md-button>
+       						</div>
         				</md-content>
         			</div>
         		</div>
