Switch to AtlantisRoot for mode

--- a/Server/Webapp/app/views/home.html
+++ b/Server/Webapp/app/views/home.html
@@ -8,7 +8,7 @@
 					<td width='50%' style='text-align:center'><b>Demain</b><br><img alt="" ng-src="{{day2}}"><br>{{meteo2}}</td>
 				</tr>
 			</table>
-			<label>Mode : {{getMode(mode)}}</label>
+			<label>Mode : {{getMode(atlantis.mode)}}</label>
 		</div>
 	</div>
 	<div class="panel panel-info">
