--- a/Server/Webapp/app/views/settings.html
+++ b/Server/Webapp/app/views/settings.html
@@ -14,6 +14,29 @@
         				<label style="margin-top:20px">Etat : {{daemon}}</label>
         			</div>
         		</div>
+        		<div class="panel panel-info">
+        			<div class="panel-heading">Mode</div>
+        			<div class="panel-body">
+        				<md-content layout=column>
+        					<p>Activer le mode nuit</p>
+        					<div layout=row>
+        						<md-input-container flex>
+									<label>De</label>
+									<input ng-model=daemon.night.from type="time">
+								</md-input-container>
+								<md-input-container flex>
+									<label>&Agrave;</label>
+									<input ng-model=daemon.night.to type="time">
+								</md-input-container>
+        					</div>
+        					<div layout=row layout-align="end center">
+       							<md-button class="md-icon-button" aria-label="FAB" ng-click="saveNightModeTime()">
+								  <md-icon md-svg-src="images/svg/ic_check_black_36px.svg"></md-icon>
+								</md-button>
+       						</div>
+        				</md-content>
+        			</div>
+        		</div>
         	</div>
         	<div class=right50>
         		<div class="panel panel-info">
