--- a/Server/Webapp/app/views/settings.html
+++ b/Server/Webapp/app/views/settings.html
@@ -22,11 +22,11 @@
         					<div layout=row>
         						<md-input-container flex>
 									<label>De</label>
-									<input ng-model=daemon.night.from type="time">
+									<input ng-model=night.from type="time">
 								</md-input-container>
 								<md-input-container flex>
 									<label>&Agrave;</label>
-									<input ng-model=daemon.night.to type="time">
+									<input ng-model=night.to type="time">
 								</md-input-container>
         					</div>
         					<div layout=row layout-align="end center">
