Add export settings button

--- a/Server/Webapp/app/views/settings.html
+++ b/Server/Webapp/app/views/settings.html
@@ -1,5 +1,8 @@
 <div>
   <md-content class="md-padding">
+  	<div layout=row layout-align="end center">
+  		<md-button aria-label="export" class="md-raised md-primary" ng-click="exportSettings()"><md-icon md-svg-src="images/svg/ic_system_update_alt_white_36px.svg"></md-icon></md-button>
+  	</div>
     <md-tabs md-dynamic-height md-border-bottom>
       <md-tab label="Etat Syst&egrave;me">
         <md-content class="md-padding" ng-controller="StatusSettingsCtrl">
