--- a/Server/Webapp/app/views/cameras.html
+++ b/Server/Webapp/app/views/cameras.html
@@ -30,11 +30,11 @@
 				</div>
 				<div layout=row layout-align="start center">
 					<img src="images/ng_image.png">
-					Image : <a href="" ng-click="refresh(camera)"> http://{{camera.ip}}/{{camera.image}}</a>
+					Image : http://{{camera.ip}}/{{camera.image}}
 				</div>
 				<div layout=row layout-align="start center">
 					<img src="images/ng_video.png">
-					Vid&eacute;o : <a href="" ng-click="refreshVideo(camera)"> http://{{camera.ip}}/{{camera.video}}</a>
+					Vid&eacute;o : http://{{camera.ip}}/{{camera.video}}
 				</div>
 			</div>
 		</md-card-content>
