--- a/Server/Webapp/app/views/entretien.html
+++ b/Server/Webapp/app/views/entretien.html
@@ -7,7 +7,7 @@
 <md-content>
 	<div layout=row layout-padding>
 		<md-input-container flex>
-			<label>Rechercher</label>
+			<label>{{ 'VIEW_CLEANING_SEARCH' | translate }}</label>
 			<input ng-model=item ng-enter="" flex ng-change="filter(item)">
 		</md-input-container>
 		<md-button class="md-fab md-primary md-mini" aria-label="FAB" ng-click="add(e)">
@@ -16,7 +16,7 @@
 	</div>
 </md-content>
 <div class="panel panel-info">
-	<div class="panel-heading">Hygi&egrave;ne et Entretien</div>
+	<div class="panel-heading">{{ 'VIEW_CLEANING_CLEANING' | translate }}</div>
 	<div class="panel-body">
 		<md-content ng-repeat="entretien in entretiens">
 			<div layout=row layout-align="start center" >
