--- a/Server/Webapp/app/views/music.html
+++ b/Server/Webapp/app/views/music.html
@@ -2,14 +2,14 @@
 	<div class="panel panel-info">
 		<div class="panel-heading">
 			<div layout=row layout-align="start center">
-				<span flex>Contr&ocirc;les</span>
+				<span flex>{{ 'VIEW_MUSIC_CONTROLS' | translate }}</span>
 				<md-menu>
    					<md-icon ng-click="$mdOpenMenu($event)" md-svg-icon="images/svg/ic_more_vert_white_24px.svg"></md-icon>
  					<md-menu-content>
    						<md-menu-item>
    							<md-button  ng-click="action('refresh')">
 								<md-icon md-svg-src="images/svg/ic_refresh_black_24px.svg"></md-icon>	
-   								Actualiser
+   								{{ 'VIEW_MUSIC_REFRESH' | translate }}
  							</md-button>
   						</md-menu-item>
  					</md-menu-content>
@@ -49,7 +49,7 @@
 	</div>
 </div>
 <div class="panel panel-info right50">
-	<div class="panel-heading">Musith&egrave;que</div>
+	<div class="panel-heading">{{ 'VIEW_MUSIC_LIBRARY' | translate }}</div>
 	<div class="panel-body">
 		<div layout=column>
 			<md-input-container>
@@ -58,7 +58,7 @@
 				</md-select>
 			</md-input-container>
 			<md-input-container flex>
-				<label>Rechercher</label>
+				<label>{{ 'VIEW_MUSIC_SEARCH' | translate }}</label>
 				<input ng-model=search ng-change="filter(search)">
 			</md-input-container>
 		</div>
