--- a/Server/Webapp/app/views/history.html
+++ b/Server/Webapp/app/views/history.html
@@ -1,23 +1,23 @@
 <div class=right30>
 	<div class="panel panel-info">
-		<div class=panel-heading>Options</div>
+		<div class=panel-heading>{{ 'VIEW_HISTORY_OPTIONS' | translate }}</div>
 		<div class=panel-body layout=column>
 			<md-input-container>
-				<md-select ng-model=capteur placeholder=Capteur md-on-close="loadSensor()">
+				<md-select ng-model=capteur placeholder="{{ 'VIEW_HISTORY_SENSOR' | translate }}" md-on-close="loadSensor()">
 					<md-option ng-value=capteur ng-repeat="capteur in capteurs track by capteur.id">{{capteur.alias}} ({{capteur.type}})</md-option>
 				</md-select>
 			</md-input-container>
 			<md-input-container>
-				<md-select ng-model=plante placeholder=Plante md-on-close="loadPlant()">
+				<md-select ng-model=plante placeholder="{{ 'VIEW_HISTORY_PLANT' | translate }}" md-on-close="loadPlant()">
 					<md-option ng-value=plante ng-repeat="plante in plantes track by plante.id">{{plante.title}}</md-option>
 				</md-select>
 			</md-input-container>
 			<md-input-container>
-				<label>De</label>
+				<label>{{ 'VIEW_HISTORY_FROM' | translate }}</label>
 				<input ng-model=from type=date class=dialog-close>
 			</md-input-container>
 			<md-input-container>
-				<label>Jusqu'&agrave;</label>
+				<label>{{ 'VIEW_HISTORY_TO' | translate }}</label>
 				<input ng-model=to type=date class=dialog-close>
 			</md-input-container>
 		</div>
