--- a/Server/Webapp/app/views/scenario.html
+++ b/Server/Webapp/app/views/scenario.html
@@ -7,26 +7,26 @@
 	{{scenario_description}}
 </div>
 <div class="panel panel-info">
-	<div class=panel-heading>Contr&ocirc;les</div>
+	<div class=panel-heading>{{ 'VIEW_SCENARIO_CONTROLS' | translate }}</div>
 	<div class=panel-body layout=column>
-		<md-select ng-model=scenario aria-label="scenarios" placeholder="Sc&eacute;nario" md-on-close="loadScenario(scenario)">
+		<md-select ng-model=scenario aria-label="scenarios" placeholder="{{ 'VIEW_SCENARIO_SCENARIO' | translate }}" md-on-close="loadScenario(scenario)">
 			<md-option ng-value=scenario ng-repeat="scenario in scenarios">{{scenario.file}}</md-option>
 		</md-select>
 		<md-input-container>
-			<label>Nom du sc&eacute;nario</label>
+			<label>{{ 'VIEW_SCENARIO_SCENARIO_NAME' | translate }}</label>
 			<input ng-model=newScenario ng-change="updateTitle()">
 		</md-input-container>
 		<div layout=row>
-			<md-button class="md-raised" ng-click="new()" flex>Nouveau</md-button>		
-			<md-button class="md-raised md-primary" ng-click="save()" flex>Enregistrer</md-button>		
-			<md-button class="md-raised md-warn" ng-click="delete()" flex>Supprimer</md-button>		
+			<md-button class="md-raised" ng-click="new()" flex>{{ 'VIEW_SCENARIO_NEW' | translate }}</md-button>		
+			<md-button class="md-raised md-primary" ng-click="save()" flex>{{ 'VIEW_SCENARIO_SAVE' | translate }}</md-button>		
+			<md-button class="md-raised md-warn" ng-click="delete()" flex>{{ 'VIEW_SCENARIO_DELETE' | translate }}</md-button>		
 		</div>
 	</div>
 </div>
 <div layout=row layout-align="center center" ng-if="tools">
-	<md-button class="md-raised" ng-click="loadToolbox('atlantis')">Capteurs</md-button>
-	<md-button class="md-raised" ng-click="loadToolbox('logic')">Logique</md-button>
-	<md-button class="md-raised" ng-click="loadToolbox('control')">Contr&ocirc;le</md-button>
+	<md-button class="md-raised" ng-click="loadToolbox('atlantis')">{{ 'VIEW_SCENARIO_SENSORS' | translate }}</md-button>
+	<md-button class="md-raised" ng-click="loadToolbox('logic')">{{ 'VIEW_SCENARIO_LOGIC' | translate }}</md-button>
+	<md-button class="md-raised" ng-click="loadToolbox('control')">{{ 'VIEW_SCENARIO_CONTROL' | translate }}</md-button>
 </div>
 <div id="blocklyArea" class="container" style=""></div>
 <xml id="toolbox" style="display: none">
