--- a/Server/Webapp/app/views/geo.html
+++ b/Server/Webapp/app/views/geo.html
@@ -1,23 +1,20 @@
-<md-fab-speed-dial md-direction="left" style="float:right">
-  <md-fab-trigger>
-    <md-button aria-label="menu" class="md-fab md-warn">
-      <md-icon md-svg-src="images/svg/ic_menu_white_24px.svg"></md-icon>
-    </md-button>
-  </md-fab-trigger>
-  <md-fab-actions>
-    <md-button aria-label="Actualiser" class="md-fab md-raised md-mini" ng-click="getLocation()">
-      <md-icon md-svg-src="images/svg/ic_refresh_black_24px.svg"></md-icon>
-    </md-button>
-    <md-button aria-label="Demander position" class="md-fab md-raised md-mini" ng-click="request('p')">
-      <md-icon md-svg-src="images/svg/ic_center_focus_strong_black_24px.svg"></md-icon>
-    </md-button>
-    <md-button aria-label="Demander position s" class="md-fab md-raised md-mini" ng-click="request('s')" ng-if="admin">
-      <md-icon md-svg-src="images/svg/ic_center_focus_weak_black_24px.svg"></md-icon>
-    </md-button>
-  </md-fab-actions>
-</md-fab-speed-dial>
+<div layout="row" layout-align="center center" layout-margin>
+	<md-button class="md-raised" ng-click="getLocation()">
+		<md-icon md-svg-src="images/svg/ic_refresh_black_24px.svg"></md-icon>
+	</md-button>
+	<md-button class="md-raised" ng-click="request('p')">
+		<md-icon md-svg-src="images/svg/ic_center_focus_strong_black_24px.svg"></md-icon>
+	</md-button>
+	<md-button class="md-raised" ng-click="request('s')" ng-if="admin">
+		<md-icon md-svg-src="images/svg/ic_center_focus_weak_black_24px.svg"></md-icon>
+	</md-button>
+</div>
 
 <map  center="{{home.lat}}, {{home.long}}" style="height:500px" zoom="14">
 	<marker position="{{home.lat}}, {{home.long}}" title="Atlantis" animation="Animation.BOUNCE"></marker>
 	<marker ng-repeat="device in devices" position="{{device.lat}}, {{device.long}}" title="{{device.mac}} &agrave; {{device.timestamp}}"></marker>
 </map>
+
+<div>
+
+</div>
