Add owncloud option

--- a/Server/Webapp/app/views/user_add.html
+++ b/Server/Webapp/app/views/user_add.html
@@ -21,6 +21,7 @@
 			<label>T&eacute;l&eacute;phone</label>
 			<input ng-model=user.phone class=dialog-close>
 		</md-input-container>
+		<md-checkbox ng-model="user.owncloud">Cr&eacute;er un compte ownCloud</md-checkbox>
 	</md-content>
 	<div class=md-actions>
 		<md-button ng-click=cancel()>Annuler</md-button>
